--- a/garagesign.html
+++ b/garagesign.html
@@ -94,7 +94,7 @@ function myFunction() {
             
             <p class="h4 text-center"><b>Sign up credentials</b></p>
 <!--<small  class="form-text text-danger">Fill all fields</small>-->
-			
+			<form>
                  <input class="form-control" id="ha" type="text" name="first" placeholder="Enter First Name"><br />
                     <span class="Error"></span>
             <input class="form-control" id="ha" type="text" name="last"  placeholder="Enter Last Name"><br />
