--- a/userlognew.html
+++ b/userlognew.html
@@ -119,7 +119,7 @@ return false;}
 						<small  class="form-text text-danger">Fill all fields</small>
 
 <form  action = "includes/userlog2.php" method = "POST" name="myForm" onsubmit="return validateForm()">
-<input class="form-control"  type="text" name="username" placeholder="Enter Username" value="'.$username.'"><br />
+<input class="form-control"  type="text" name="username" placeholder="Enter Username"><br />
                     <span class="Error"></span>
 	
                 <div>
